--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
       "@chakra-ui/react": "^1.4.2",
       "@emotion/react": "^11.0.0",
       "@emotion/styled": "^11.0.0",
+      "@fontsource/open-sans": "^4.5.2",
+      "@fontsource/raleway": "^4.5.0",
       "framer-motion": "^4.0.3",
       "next": "latest",
       "react": "^17.0.2",
