--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "@emotion/styled": "^11.0.0",
       "@fontsource/open-sans": "^4.5.2",
       "@fontsource/raleway": "^4.5.0",
+      "@react-icons/all-files": "^4.1.0",
       "framer-motion": "^4.0.3",
       "next": "latest",
       "react": "^17.0.2",
