--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "gen": "graphql-codegen --config codegen.yml"
    },
    "dependencies": {
+      "@apollo/client": "^3.4.17",
       "@chakra-ui/icons": "^1.0.0",
       "@chakra-ui/react": "^1.4.2",
       "@emotion/react": "^11.0.0",
@@ -15,12 +16,20 @@
       "@fontsource/raleway": "^4.5.0",
       "@react-icons/all-files": "^4.1.0",
       "framer-motion": "^4.0.3",
+      "graphql": "15.3.0",
+      "graphql-tag": "^2.12.6",
       "next": "latest",
+      "next-apollo": "^5.0.7",
       "react": "^17.0.2",
       "react-dom": "^17.0.2"
    },
    "license": "MIT",
    "devDependencies": {
+      "@graphql-codegen/cli": "^2.3.0",
+      "@graphql-codegen/typescript": "^2.4.1",
+      "@graphql-codegen/typescript-operations": "^2.2.1",
+      "@graphql-codegen/typescript-react-apollo": "^3.2.2",
+      "@types/node": "^16.11.9",
       "typescript": "^4.4.4"
    }
 }
