--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
       "@fontsource/open-sans": "^4.5.2",
       "@fontsource/raleway": "^4.5.0",
       "@react-icons/all-files": "^4.1.0",
-      "@reduxjs/toolkit": "^1.6.2",
       "framer-motion": "^4.0.3",
       "graphql": "15.3.0",
       "graphql-tag": "^2.12.6",
       "next": "latest",
       "next-apollo": "^5.0.7",
       "react": "^17.0.2",
-      "react-dom": "^17.0.2",
-      "react-redux": "^7.2.6"
+      "react-dom": "^17.0.2"
    },
    "license": "MIT",
    "devDependencies": {
@@ -32,7 +30,6 @@
       "@graphql-codegen/typescript-operations": "^2.2.1",
       "@graphql-codegen/typescript-react-apollo": "^3.2.2",
       "@types/node": "^16.11.9",
-      "@types/react-redux": "^7.1.20",
       "typescript": "^4.4.4"
    }
 }
