--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
       "@chakra-ui/react": "^1.4.2",
       "@emotion/react": "^11.0.0",
       "@emotion/styled": "^11.0.0",
+      "@fontsource/cinzel": "^4.5.0",
+      "@fontsource/comfortaa": "^4.5.1",
       "@fontsource/open-sans": "^4.5.2",
       "@fontsource/raleway": "^4.5.0",
       "@react-icons/all-files": "^4.1.0",
