--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@fontsource/open-sans": "^4.5.2",
       "@fontsource/raleway": "^4.5.0",
       "@react-icons/all-files": "^4.1.0",
+      "formik": "^2.2.9",
       "framer-motion": "^4.0.3",
       "graphql": "15.3.0",
       "graphql-tag": "^2.12.6",
