--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "@emotion/styled": "^11.0.0",
       "@fontsource/cinzel": "^4.5.0",
       "@fontsource/comfortaa": "^4.5.1",
+      "@fontsource/hahmlet": "^4.5.3",
       "@fontsource/open-sans": "^4.5.2",
       "@fontsource/raleway": "^4.5.0",
       "@react-icons/all-files": "^4.1.0",
